@@ -47,7 +47,7 @@
 </ul>
 </p>
 
-<p>Протестировано с Django 0.95 и 0.96</p>
+<p>Протестировано с Django 0.95, 0.96 и 0.97pre</p>
 <p>Данный пример работает на Django {{ params.django_version }} с использованием PyTils {{ params.pytils_version }}.</p>
 
 {% endblock %}
