@@ -1,9 +1,10 @@
 pytils (0.2.1-svn)
 
+  * add 'preposition' option to dt.ru_strftime (#23)
   * fix bugs (#20, #22) 
-  * add get_plural to pytils.numeral (issue#19)
+  * add get_plural to pytils.numeral (#19)
 
- -- Yury Yurevich <the.pythy@gmail.com>  Sun, 01 Apr 2007 21:38:02 +0700
+ -- Yury Yurevich <the.pythy@gmail.com>  Sat, 09 Jun 2007 21:28:49 +0700
 
 pytils (0.2.1)
 
